Fix internal docs links for GitHub Pages subpath

--- a/src/content/docs/administration/how-to/troubleshooting.mdx
+++ b/src/content/docs/administration/how-to/troubleshooting.mdx
@@ -39,7 +39,7 @@ Typical signs:
 Checks:
 
 1. Grant root command permission for your command set.
-2. Grant required action permissions (see [Permissions](/administration/reference/permissions/)).
+2. Grant required action permissions (see [Permissions](../reference/permissions/)).
 3. Verify vanish level/visibility logic for observer accounts.
 
 ## Feature settings appear ignored
