--- a/src/content/docs/administration/reference/configuration-overview.mdx
+++ b/src/content/docs/administration/reference/configuration-overview.mdx
@@ -26,7 +26,7 @@ SayanVanish writes platform config into each plugin's data folder.
 
 ## Read next
 
-- [settings.yml](/administration/reference/settings/)
-- [storage.yml](/administration/reference/storage/)
-- [message.yml](/administration/reference/message/)
-- [features](/administration/reference/features/)
+- [settings.yml](./settings/)
+- [storage.yml](./storage/)
+- [message.yml](./message/)
+- [features](./features/)
