--- a/src/content/docs/development/getting-started/runtime-model.mdx
+++ b/src/content/docs/development/getting-started/runtime-model.mdx
@@ -31,4 +31,4 @@ sidebar:
 - Cache: `MemoryCacheService`
 - Visibility policy: `DefaultVisibilityPolicy`
 
-Go to [API introduction](/development/api/introduction/) for direct usage examples.
+Go to [API introduction](../api/introduction/) for direct usage examples.
