build: update stickynote

--- a/src/content/docs/development/getting-started/dependency-setup.mdx
+++ b/src/content/docs/development/getting-started/dependency-setup.mdx
@@ -43,7 +43,7 @@ repositories {
 | Artifact | Use when |
 | --- | --- |
 | `org.sayandev:sayanvanish-api:<version>` | You only need shared API contracts |
-| `org.sayandev:sayanvanish-bukkit:<version>` | You need Paper platform helpers/events |
+| `org.sayandev:sayanvanish-paper:<version>` | You need Paper platform helpers/events |
 | `org.sayandev:sayanvanish-proxy-velocity:<version>` | You need Velocity platform helpers/events |
 
 <Tabs>
